Adicionar banner, numero da conta ramdomico e implementa testes de aceitação de criar, sacar e depositar

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,2 +1,2 @@
-cpf.invalid = CPF informado para criaÁ„o de conta est· inv·lido.
-cpf.not.empty = … necess·rio informar um cpf para abertura de nova conta.
+cpf.invalid = CPF informado para cria√ß√£o de conta est√° inv√°lido.
+cpf.not.empty = √â necess√°rio informar um cpf para abertura de nova conta.
